# humans

./: .gitignore  INSTALL.md  LICENSE  README.md  build.sh  clean.sh
blueview/catkin_ws/src/sonar_2D/: CMakeLists.txt  package.xml
blueview/catkin_ws/src/sonar_2d/: CMakeLists.txt  package.xml
scripts/: change_ros_dist.sh
scripts/rqt-plugin-generator/: rqt-plugin-generator.sh
scripts/rqt-plugin-generator/template/: CMakeLists.txt  mainpage.dox  package.xml  plugin.xml  setup.py
scripts/rqt-plugin-generator/template/include/rqt_template/: ratio_layouted_frame.h  template.h
scripts/rqt-plugin-generator/template/scripts/: rqt_template
scripts/rqt-plugin-generator/template/src/rqt_template/: ratio_layouted_frame.cpp  template.cpp  template.ui
src/blueview/: README.md
src/blueview/catkin_ws/src/sonar_2d_node/: CMakeLists.txt  package.xml
src/gazebo_plugins/gazebo_plugin_tutorial/: CMakeLists.txt  hello_world.cc  model_push.cc  model_push.world
src/input/: README.md
src/input/catkin_ws/src/input/: CMakeLists.txt  package.xml
src/sandbox/: README.md
src/sandbox/catkin_ws/src/tests/: CMakeLists.txt  package.xml
src/syllo/: README.md
src/syllo/catkin_ws/src/blueview/: CMakeLists.txt  package.xml
src/syllo/catkin_ws/src/common/: CMakeLists.txt
src/syllo/catkin_ws/src/serial/: package.xml
src/syllo/catkin_ws/src/syllo_blueview/: CMakeLists.txt  package.xml
src/syllo/catkin_ws/src/syllo_common/: CMakeLists.txt  package.xml
src/syllo/catkin_ws/src/syllo_serial/: CMakeLists.txt  package.xml
src/syllo_rqt/: README.md
src/syllo_rqt/catkin_ws/src/rqt_autopilot/: CMakeLists.txt  mainpage.dox  package.xml  plugin.xml  setup.py
src/syllo_rqt/catkin_ws/src/rqt_autopilot/include/rqt_autopilot/: autopilot.h  ratio_layouted_frame.h
src/syllo_rqt/catkin_ws/src/rqt_autopilot/scripts/: rqt_autopilot
src/syllo_rqt/catkin_ws/src/rqt_autopilot/src/rqt_autopilot/: autopilot.cpp  autopilot.ui  ratio_layouted_frame.cpp
src/syllo_rqt/catkin_ws/src/rqt_blueview/: CMakeLists.txt  mainpage.dox  package.xml  plugin.xml  setup.py
src/syllo_rqt/catkin_ws/src/rqt_blueview/include/rqt_blueview/: blueview.h  ratio_layouted_frame.h
src/syllo_rqt/catkin_ws/src/rqt_blueview/scripts/: rqt_blueview
src/syllo_rqt/catkin_ws/src/rqt_blueview/src/rqt_blueview/: blueview.cpp  blueview.ui  ratio_layouted_frame.cpp
src/syllo_rqt/catkin_ws/src/rqt_compass/: CMakeLists.txt  mainpage.dox  package.xml  plugin.xml  setup.py
src/syllo_rqt/catkin_ws/src/rqt_compass/cmake/Modules/: FindQwt.cmake
src/syllo_rqt/catkin_ws/src/rqt_compass/include/rqt_compass/: compass.h  ratio_layouted_frame.h
src/syllo_rqt/catkin_ws/src/rqt_compass/scripts/: rqt_compass
src/syllo_rqt/catkin_ws/src/rqt_compass/src/rqt_compass/: compass.cpp  compass.ui  ratio_layouted_frame.cpp
src/syllo_rqt/catkin_ws/src/rqt_experiment_notes/: CMakeLists.txt  mainpage.dox  package.xml  plugin.xml  setup.py
src/syllo_rqt/catkin_ws/src/rqt_experiment_notes/include/rqt_experiment_notes/: experiment_notes.h  ratio_layouted_frame.h
src/syllo_rqt/catkin_ws/src/rqt_experiment_notes/scripts/: rqt_experiment_notes
src/syllo_rqt/catkin_ws/src/rqt_experiment_notes/src/rqt_experiment_notes/: experiment_notes.cpp  experiment_notes.ui  ratio_layouted_frame.cpp
src/syllo_rqt/catkin_ws/src/rqt_rov_status/: CMakeLists.txt  mainpage.dox  package.xml  plugin.xml  setup.py
src/syllo_rqt/catkin_ws/src/rqt_rov_status/include/rqt_rov_status/: ratio_layouted_frame.h  rov_status.h
src/syllo_rqt/catkin_ws/src/rqt_rov_status/scripts/: rqt_rov_status
src/syllo_rqt/catkin_ws/src/rqt_rov_status/src/rqt_rov_status/: ratio_layouted_frame.cpp  rov_status.cpp  rov_status.ui
src/syllo_rqt/catkin_ws/src/rqt_thrust_monitor/: CMakeLists.txt  mainpage.dox  package.xml  plugin.xml  setup.py
src/syllo_rqt/catkin_ws/src/rqt_thrust_monitor/include/rqt_thrust_monitor/: ratio_layouted_frame.h  thrust_monitor.h
src/syllo_rqt/catkin_ws/src/rqt_thrust_monitor/scripts/: rqt_thrust_monitor
src/syllo_rqt/catkin_ws/src/rqt_thrust_monitor/src/rqt_thrust_monitor/: ratio_layouted_frame.cpp  thrust_monitor.cpp  thrust_monitor.ui
src/syllo_rqt/catkin_ws/src/rqt_uhri/: CMakeLists.txt  mainpage.dox  package.xml  plugin.xml  setup.py
src/syllo_rqt/catkin_ws/src/rqt_uhri/include/rqt_uhri/: ratio_layouted_frame.h  uhri.h
src/syllo_rqt/catkin_ws/src/rqt_uhri/scripts/: rqt_uhri
src/syllo_rqt/catkin_ws/src/rqt_uhri/src/rqt_uhri/: ratio_layouted_frame.cpp  uhri.cpp  uhri.ui
src/syllo_rqt/perspectives/: rov_1.perspective
src/syllo_uwsim/catkin_ws/src/joint_cmd_test/: CMakeLists.txt  package.xml
src/underwater/catkin_ws/src/g500arm5_description/: CMakeLists.txt  model.config  package.xml
src/videoray/: README.md
src/videoray/catkin_ws/src/videoray/: CMakeLists.txt  package.xml
src/videoray/catkin_ws/src/videoray/config/: deploy.yaml
src/videoray/catkin_ws/src/videoray/gui/videoray/: mainwindow.ui  videoray.pro
src/videoray/catkin_ws/src/videoray/include/: Packetizer.h  VideoRayComm.h
src/videoray/catkin_ws/src/videoray/launch/: camera.launch  camera_endoscope.launch  deploy.launch  deploy_with_sonar.launch  morse-moos-ros.launch  morse.launch
src/videoray/catkin_ws/src/videoray/msg/: AccessoryControl.msg  DesiredTrajectory.msg  Notes.msg  Status.msg  Throttle.msg  UHRIComm.msg
src/videoray/catkin_ws/src/videoray/octave/: README.md  control_openloop.m  control_p.m  normDegrees.m  saturate.m  sim.m  videoray_model.m  videoray_pro_3_params.m  videoray_pro_4_params.m
src/videoray/catkin_ws/src/videoray/scripts/: deploy.sh
src/videoray/catkin_ws/src/videoray/src/camera/: main.cpp
src/videoray/catkin_ws/src/videoray/src/comm/: Packetizer.cpp  VideoRayComm.cpp
src/videoray/catkin_ws/src/videoray/src/control/: main.cpp
src/videoray/catkin_ws/src/videoray/src/sim/: cam_sim.cpp  videoray_control.cpp  videoray_control_p.cpp  videoray_moos.cpp  videoray_sim.cpp  videoray_sim_and_control.cpp
syllo/catkin_ws/: clean.sh
syllo/catkin_ws/src/common/: package.xml
syllo/catkin_ws/src/serial/: CMakeLists.txt
(+54 files in other folders)
