<package>
  <name>rqt_compass</name>
  <version>0.3.0</version>
  <description>rqt_compass provides a GUI plugin</description>
  <maintainer email="demarco@gatech.edu">Kevin DeMarco</maintainer>

  <license>BSD</license>

  <!--<url type="website">http://ros.org/wiki/rqt_compass</url>
  <url type="repository">https://github.com/ros-visualization/rqt_common_plugins</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_common_plugins/issues</url> -->

  <author>Kevin DeMarco</author>

  <buildtool_depend>catkin</buildtool_depend>

  
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>syllo_common</build_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>syllo_common</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
